--- a/compression/Makefile.include
+++ b/compression/Makefile.include
@@ -1,4 +1,3 @@
 ifneq (,$(filter compression,$(USEMODULE)))
-#	USEMODULE_INCLUDES += $(RIOTBASE)/micromole/system_common/include
-	INCLUDES += -I$(RIOTBASE)/../iot_data_compression/compression/include
+	INCLUDES += -I$(RIOTBASE)/iot-data-compression/compression/include
 endif
